obtaining the joke and showing in the html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <div id="joke-container">Presiona el botón para reir</div>
   <button id="joke-button">Obtener Chiste</button>
   
-  <script src="dist/app.js" type="module"></script>
+  <script src="./dist/app.js" type="module"></script>
 </body>
 </html>
