--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 <body>
   <div id="joke-container">Presiona el botón para reir</div>
   <button id="joke-button">Obtener Chiste</button>
+
+  <div id="rating-buttons">
+    <button data-rating="1">😐</button>
+    <button data-rating="2">😀</button>
+    <button data-rating="3">🤣</button>
+  </div>
   
   <script src="./src/app.ts" type="module"></script>
 </body>
