installinkfg tailwind to start into the styles

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <link href="./src/styles/output.css" rel="stylesheet">
   <title>Jokes with TypeScript</title>
+
 </head>
-<body>
+<body class="">
   <div id="joke-container">Presiona el botón para reir</div>
   <button id="joke-button">Obtener Chiste</button>
 
