creating the weather interfaces,  the function api wather to centralize the use of urls ,  the  fetch weather to obtain the data in the joke controller declare the show weather  declare coord and obtain the result or error  also refactirize the  weather icon range to separete and the get weatehr icon function

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 </head>
 <body class="">
+  
+  <div id="weather-container">Cargando clima...</div>
   <div id="joke-container">Presiona el botón para reir</div>
   <button id="joke-button">Obtener Chiste</button>
 
