--- a/index.html
+++ b/index.html
@@ -2,38 +2,85 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Jokes with TypeScript</title>
+  <title>Jokes & Apis with TypeScript</title>
   <link href="./src/styles/output.css" rel="stylesheet" />
 </head>
-<body   id="main-body"
-class="min-h-screen flex flex-col justify-center items-center
-       bg-gradient-to-br from-blue-500 via-purple-600 to-pink-500
-       text-white p-6 relative
-       transition-colors duration-1000 ease-in-out">
+<body
+  id="main-body"
+  class="min-h-screen bg-gradient-to-br from-blue-500 via-purple-600 to-pink-500 text-white flex items-center justify-center p-4"
+>
+  <!-- Tarjeta flotante contenedor de las dos columnas -->
+  <div
+    class="flex flex-col md:flex-row w-full max-w-6xl bg-gray-900 bg-opacity-90 rounded-3xl shadow-2xl overflow-hidden"
+    style="height: 80vh;"
+  >
 
-  <div id="weather-container" class="fixed top-4 left-1/2 transform -translate-x-1/2 text-xl font-semibold z-10">
+    <!-- Panel izquierdo: imagen o fondo oscuro -->
+    <div
+      id="left-panel"
+      class="relative w-full md:w-[60%] flex justify-center items-center bg-black bg-opacity-70"
+    >
+      <img
+        id="joke-image"
+        class="object-cover w-full h-full rounded-none shadow-lg transition-opacity duration-1000 ease-in-out opacity-0"
+        alt="Imagen generada"
+      />
+    </div>
 
+    <!-- Panel derecho: contenido -->
+    <div
+      id="joke-panel"
+      class="w-full md:w-[40%] flex flex-col justify-between p-6"
+    >
+      <!-- Clima -->
+      <div
+        id="weather-container"
+        class="text-center text-lg font-semibold mt-2 md:mt-4 mb-2"
+      ></div>
+
+      <!-- Chiste centrado -->
+      <div class="flex-1 flex items-center justify-center text-center">
+        <div
+          id="joke-container"
+          class="text-[clamp(1.5rem,4vw,2.5rem)] font-bold leading-tight max-w-md px-2"
+        >
+          <!-- Aquí se mostrará el chiste -->
+        </div>
+      </div>
+
+      <!-- Botón y emojis -->
+      <div class="flex flex-col items-center mt-4 mb-2">
+        <button
+          id="joke-button"
+          class="px-6 py-3 bg-white text-purple-700 font-bold rounded-md shadow-lg hover:bg-purple-100 transition mb-4"
+        >
+          Make me Laugh
+        </button>
+
+        <div id="rating-buttons" class="flex space-x-7">
+          <button
+            data-rating="1"
+            class="text-5xl hover:scale-125 transition"
+          >
+            😐
+          </button>
+          <button
+            data-rating="2"
+            class="text-5xl hover:scale-125 transition"
+          >
+            😀
+          </button>
+          <button
+            data-rating="3"
+            class="text-5xl hover:scale-125 transition"
+          >
+            🤣
+          </button>
+        </div>
+      </div>
+    </div>
   </div>
 
-
-  <div id="joke-container" class="mb-6 mt-24 text-center text-5xl max-w-xl"></div>
-
-  <button id="joke-button"
-  class="fixed bottom-24 left-1/2 transform -translate-x-1/2
-         px-6 py-3 bg-white text-purple-700 font-bold rounded-md shadow-lg
-         hover:bg-purple-100 transition z-20">
-Make me Laugh
-</button>
-
-<div id="rating-buttons"
-class="fixed bottom-4 left-1/2 transform -translate-x-1/2 flex space-x-7 z-20">
-<button data-rating="1" class="text-7xl hover:scale-125 transition">😐</button>
-<button data-rating="2" class="text-7xl hover:scale-125 transition">😀</button>
-<button data-rating="3" class="text-7xl hover:scale-125 transition">🤣</button>
-</div>
-
   <script src="./src/app.ts" type="module"></script>
-</body>
-
 </body>
 </html>
