--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 >
   <!-- Tarjeta flotante contenedor de las dos columnas -->
   <div
-    class="flex flex-col md:flex-row w-full max-w-6xl bg-gray-900 bg-opacity-90 rounded-3xl shadow-2xl overflow-hidden"
+    class="flex flex-col md:flex-row w-full max-w-6xl bg-gray-900 bg-opacity-90 rounded-xl shadow-2xl overflow-hidden"
     style="height: 80vh;"
   >
 
