--- a/index.html
+++ b/index.html
@@ -11,23 +11,28 @@
 >
   <!-- Tarjeta flotante con dos columnas -->
   <div
-  class="flex flex-col md:flex-row w-full max-w-6xl bg-white/10 backdrop-blur-md rounded-[2rem] shadow-2xl border border-white/20"
-  style="height: 80vh;"
+  class="flex flex-col md:flex-row w-full max-w-6xl bg-white/10 backdrop-bl-md rounded-[2rem] md:rounded-bl-[30rem] shadow-2xl border border-white/20 
+         h-auto md:h-[80vh] min-h-[600px] sm:min-h-[700px] overflow-hidden"
 >
 
-    <!-- Panel izquierdo: imagen de fondo + imagen generada -->
+    <!-- Panel izquierdo: imagen de fondo -->
     <div
-      id="left-panel"
-      class=" ml-16 relative w-full md:w-[60%] flex justify-center items-center bg-no-repeat bg-center bg-contain"
-      style="background-image: url('public/assets/images/John\ Currin\ Blond\ Angel.png');"
+    id="left-panel"
+    class="relative w-full sm:px-4 sm:pt-6 md:w-[60%] flex flex-col justify-start items-start sm:items-center md:items-start ml-4 sm:ml-8 md:ml-20"
+  >
+    <h1
+      class="absolute top-4 sm:top-6 left-4 sm:left-0 text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-orange-400 text-xl sm:text-3xl md:text-5xl font-extrabold drop-shadow"
     >
-    <img
-  id="joke-image"
-  class="max-w-[90%] h-auto object-contain opacity-100 hidden"
-  alt="Imagen generada"
-/>
+      JOKES + ART APIS
+    </h1>
   
-    </div>
+    <img
+      src="public/assets/images/John Currin Blond Angel.png"
+      alt="John Currin Blond Angel"
+      class="mt-24 sm:mt-32 mx-auto w-[90%] max-w-sm md:max-w-md h-auto object-contain rounded-3xl shadow-lg"
+    />
+  </div>
+  
 
     <!-- Panel derecho: contenido -->
     <div
@@ -37,15 +42,19 @@
       <!-- Clima -->
       <div
         id="weather-container"
-        class="text-center text-lg font-semibold mt-2 md:mt-4 mb-2"
+        class="text-center text-lg font-semibold md:mt-9 mb-2"
       ></div>
 
+      <img
+      id="joke-image"
+      class="max-w-[90%] h-auto object-contain opacity-100 hidden"
+      alt="Imagen generada"
+    />
       <!-- Chiste centrado -->
       <div class="flex-1 flex items-center justify-center text-center">
         <div
           id="joke-container"
-          class="text-[clamp(1.5rem,4vw,2.5rem)] font-bold leading-tight max-w-md px-2"
-        >
+          class="text-[clamp(1rem,3vw,1.5rem)] font-bold leading-tight max-w-md px-2">
           <!-- Aquí se mostrará el chiste -->
         </div>
       </div>
@@ -54,7 +63,7 @@
       <div class="flex flex-col items-center mt-4 mb-2">
         <button
           id="joke-button"
-          class="px-6 py-3 bg-white text-purple-700 font-bold rounded-md shadow-lg hover:bg-purple-100 transition mb-4"
+          class="text-white bg-gradient-to-br from-pink-500 to-orange-400 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-pink-100 dark:focus:ring-pink-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2"
         >
           Make me Laugh
         </button>
