correction container  joke, image  create a default image await to the new image

--- a/index.html
+++ b/index.html
@@ -16,17 +16,15 @@
   >
     <!-- Panel izquierdo: imagen de fondo -->
     <div
-      id="left-panel"
-      class="relative w-full sm:px-4 sm:pt-6 md:w-[60%] 
-             flex flex-col justify-start items-start 
-             sm:items-center md:items-start ml-4 sm:ml-8 md:ml-20"
-      style="
-        background-image: url('public/assets/images/John Currin Blond Angel.png');
-        background-repeat: no-repeat;
-        background-position: center top;
-        background-size: contain;
-      "
-    >
+  id="left-panel"
+  class="relative w-[400px] h-[400px] rounded-full overflow-hidden sm:px-4 sm:pt-6 md:w-[60%] 
+  flex flex-col 
+  justify-center
+  sm:items-center md:items-center ml-4 sm:ml-8 md:ml-20
+  bg-no-repeat bg-center bg-contain"
+
+  style="background-image: url('/public/assets/images/John\ Currin\ Blond\ Angel.png');"
+>
       <h1
         class="relative top-10 sm:top-10 
                w-[90%] sm:w-auto 
