--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
   justify-center
   sm:items-center md:items-center ml-4 sm:ml-8 md:ml-20
   bg-no-repeat bg-center bg-contain"
-
-  style="background-image: url('/public/assets/images/John\ Currin\ Blond\ Angel.png');"
 >
       <h1
         class="relative top-10 sm:top-10 
@@ -38,13 +36,14 @@
       </h1>
 
       <!-- Contenedor circular -->
-      <div class="w-[400px] h-[400px] rounded-full overflow-hidden mx-auto mb-4">
+      <div class="w-[400px] h-[400px] rounded-full overflow-hidden mx-auto mb-4 border border-white/20 bg-white/10 flex items-center justify-center">
         <img
           id="joke-image"
           class="w-full h-full object-cover opacity-100 hidden"
           alt="Imagen generada"
         />
       </div>
+      
     </div>
 
     <!-- Panel derecho: contenido -->
