change the colors in the main title

--- a/index.html
+++ b/index.html
@@ -26,15 +26,9 @@
   items-center  ml-4 sm:ml-8 md:ml-20"
 >
       <h1
-        class="relative top-1 sm:top-5
-               w-[90%] sm:w-auto 
-               mx-auto text-center 
-               text-transparent bg-clip-text 
-               bg-gradient-to-r from-pink-500 to-orange-300 
-               text-3xl sm:text-5xl md:text-6xl 
-               font-extrabold drop-shadow"
-      >
-        JOKES + ART APIS
+        class="flex items-center text-5xl font-extrabold dark:text-white">Joke+Art
+        <span class="bg-orange-500 text-blue-800 text-2xl 
+        font-semibold me-2 px-2.5 py-0.5 rounded-sm dark:bg-bg-orange-500 dark:text-blue-800 ms-2">APIS</span>
       </h1>
     </h1>
     <div class="w-[80vw] max-w-[480px] aspect-square mt-10 
@@ -44,7 +38,7 @@
       <img
         id="joke-image"
         class="w-full h-full object-cover object-center
-        rounded-full opacity-100 hidden"
+        rounded-full opacity-100 hidden "
         alt="Imagen art institute"
       />
     </div>
