adding favicon and also the background in the image container

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Jokes & Apis with TypeScript</title>
   <link href="./src/styles/output.css" rel="stylesheet" />
 </head>
+<link rel="icon" type="image/png" href="/assets/images/John Currin Blond Angel.png" />
 <body
   id="main-body"
   class="min-h-screen bg-gradient-to-br
@@ -30,16 +31,16 @@
         <span class="bg-orange-500 text-blue-300 text-2xl 
         font-semibold me-2 px-2.5 py-0.5 rounded-sm dark:bg-bg-orange-500 dark:text-blue-600 ms-2">APIS</span>
       </h1>
-      </h1>
       
-    <div class="w-[80vw] max-w-[480px] aspect-square mt-10 
-    rounded-full overflow-hidden mx-auto mb-4 border
-    border-white/20 bg-white/10 flex items-center justify-center">
+      <div class="w-[80vw] max-w-[480px] aspect-square mt-10 
+      rounded-full overflow-hidden mx-auto mb-4 border
+      border-white/70 flex items-center justify-center"
+      style="background-image: url('/assets/images/John Currin Blond Angel.png'); background-size: cover; background-position: center;">
     
       <img
         id="joke-image"
         class="w-full h-full object-cover object-center
-        rounded-full opacity-100 hidden "
+         opacity-100 hidden "
         alt="Imagen art institute"
       />
     </div>
