cereate  a readme file

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         id="joke-image"
         class="w-full h-full object-cover object-center
          opacity-100 hidden "
-        alt="Imagen art institute"
+        alt=" Obra de John Currin: Blond Angel  or Art institute of Chicago"
       />
     </div>
      </div>
